--- a/exerciser/package.json
+++ b/exerciser/package.json
@@ -2,6 +2,7 @@
   "name": "exerciser",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://daniellevass.github.io/exercise-ish/",
   "dependencies": {
     "@material-ui/core": "^4.10.1",
     "@testing-library/jest-dom": "^4.2.4",
